--- a/readme.org
+++ b/readme.org
@@ -15,4 +15,4 @@
 
 * Introduction
 
-\[\Pi_{\mathbb{R}^{d+1} \rightarrow \mathcal{T}_{\mathbf{x}} \mathbb{H}^{d, k}(\mathbf{v})}:=\mathbf{v}+\langle\mathbf{x}, \mathbf{v}\rangle_{\mathcal{L}} \frac{\mathbf{x}}{k}\]
+Riemannian JAX
